CHANGELOG - What's new?

* prerelease-1.4.0.0.0 - [20-03-23]
    * Overhaul of module/library system, including `include` expression
    * Merged STD and Random libraries
    * Error tags in `error` statements are now expressions
    * Added character_list support for some built-in string functions